adding blurred background back but better

--- a/src/app.css
+++ b/src/app.css
@@ -72,5 +72,21 @@
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+
+		.bg-image {
+			background: linear-gradient(
+				rgba(var(--bbackground), 0.9), 
+				rgba(var(--bbackground), 0.9)
+			), url('/Home.png');
+			background-size: cover;
+			background-position: center;
+			background-attachment: fixed;
+			height: 100vh;
+
+			/* Add Blur Effect*/
+			filter: blur(8px);
+			-webkit-filter: blur(8px);
+		}
   }
+	
 }
