--- a/src/app.css
+++ b/src/app.css
@@ -61,6 +61,12 @@
 @layer base {
   * {
     @apply border-border;
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+  }
+
+  *::-webkit-scrollbar { 
+      display: none;  /* Safari and Chrome */
   }
 
   body {
